--- a/styles.css
+++ b/styles.css
@@ -304,7 +304,56 @@ section {
 
 .planesimg{
     object-fit:cover;
+    object-position:center;
+    width:100%;
+    height:100;
 }
-    
 
+.planes-text {
+    font-weight:500%;
+    font-size:16px;
+    line-height:24px;
+    color:#151515;
+}
 
+.planes-background {
+    position:absolute;
+    top: 208px;
+    right:-64px;
+    z-index:-1;
+}
+
+.planes {
+    position:relative;
+}
+
+.membership-list {
+    list-style-type:none;
+    display:flex;
+    gap:24px;
+}
+
+.membership-item {
+    flex-basis:calc((100% - 48px) / 3);
+    padding:24px;
+    background-color: #F5F5F5;
+}
+
+.membership-item:nth-child(2) {
+    background-color: #656293; 
+}
+
+.membership-item:first-child {
+    border-radius:20px 0px 0px 20px;
+}
+
+.membership-item:last-child {
+    border-radius:0px 20px 20px 0px;
+}
+
+.membership-item h3 {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 40px;
+    margin-bottom:32px;
+}
