--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    padding: 30 0;
+    padding: 30px 0;
 }
 
 .container {
@@ -43,19 +43,30 @@ header {
 .navigation {
     display:flex;
     align-items:center;
+    justify-content:space-between;
+    flex:1;
 }
 
 .nav-list{
     display:flex;
     list-style:none;
     gap:20px;
-    flex:1;
     align-items:center;
 }
 
 .header-buttons {
     display:flex;
+    margin-left: 95px;
+    align-items: center;
+}
 
+.new-link {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 21px;
+    text-transform: capitalize;
+    color: #181818;
 }
 
 .reg-button {
@@ -346,6 +357,28 @@ section {
 
 .membership-item:nth-child(2) {
     background-color: #656293; 
+    transform:translateY(-30px);
+}
+
+.membership-item:nth-child(2) button {
+    background-color:white;
+    color:#151513;
+}
+
+.membership-item:nth-child(2) .price {
+    color:white;
+}
+
+.membership-item:nth-child(2) h3{
+    color:white;
+}
+
+.membership-item:nth-child(2) .advantages-item.tick:before {
+    background-image: url(./Anothertick.svg)
+}
+
+.membership-item:nth-child(2) .advantages-item.cross:before {
+    background-image: url(./Anothercross.svg)
 }
 
 .membership-item:first-child {
@@ -407,7 +440,7 @@ section {
 
 .price {
     padding-top:70px;
-    color:#FFFFFF;
+    color:#161616;
 }
 
 .number { 
@@ -418,4 +451,15 @@ section {
 
 .advantages-button {
     background-color: #556293;
+    padding: 12px 16px;
+    font-size: 22px;
+    font-weight:600;
+    border-radius:12px;
+    width:100%;
+    color:white;
+    margin-top:24px;
+    border:0;
 }
+
+
+
