--- a/styles.css
+++ b/styles.css
@@ -424,6 +424,18 @@ section {
     color:#151515;
 }
 
+.planes-list {
+    display:flex;
+    list-style:none;
+    justify-content:space-between;
+}
+
+@media screen and (max-width:768x) {
+    .planes-list {
+        flex-wrap:wrap;
+    }
+}  
+
 .planes-background {
     position:absolute;
     top: 208px;
